compilateurDeca/src/test/deca/codegen/invalid/sans_objet/null.deca
// Description:
//    Erreur a l'execution : dereferencement de null
//
// Resultats:
//    Erreur : dereferencement de null
//
// Historique:
//    cree le 10/01/2026
class A {
    int x;
}
{
    A a = null;
    println(a.x);
}
